# mini-text

./: README.md  io.github.nokse22.minitext.json  io.github.nokse22.minitext.json~  meson.build
.github/workflows/: flatpak.yml  snap.yml
data/: io.github.nokse22.minitext.appdata.xml.in  io.github.nokse22.minitext.desktop.in  io.github.nokse22.minitext.gschema.xml  io.github.nokse22.minitext.metainfo.xml.in  meson.build
data/icons/: .xdp-io.github.nokse22.minitext.Source.svg~-Q8B0cx  meson.build
po/: LINGUAS  POTFILES  bg.po  cs.po  de.po  es.po  et.po  fr.po  he.po  hi.po  it.po  meson.build  mini-text.pot  nl.po  oc.po  pt_BR.po  ru.po  sr.po  sr@latin.po  template.pot  tr.po
src/: main.py  meson.build  mini-text.gresource.xml  mini-text.in  window.py  window.ui
src/gtk/: help-overlay.ui
